<resources>
    <string name="app_name">MyLevel</string>
    <string name="action_settings">Settings</string>

    <string name="title_reset_password_code">Reset Password code</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_forgot_password">Forgot your Password</string>
    <string name="title_email_verification">Email Verification</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_my_schedule">My Schedule</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_more">More</string>

    <string name="text_start">Start</string>
    <string name="skip">Skip</string>

    <!--Login Module-->
    <string name="english">English</string>
    <string name="arabic">Arabic</string>

    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_confirm_password">Confirm Password</string>
    <string name="placeholder_first_name">First Name</string>
    <string name="placeholder_last_name">Last Name</string>

    <string name="text_i_accept">I accept all the terms and conditions</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_connect_via">Or Connect Via</string>
    <string name="dont_have">Don\'t have an account yet? Sign Up</string>
    <string name="or_signup_with">Or Sign Up Via</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="text_signup">SignUp</string>
    <string name="pssword_match">Password Match</string>

    <string name="send">Send</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="enter_your_registered">Enter your registered Email below to receive your password reset code.</string>


    <string name="confirmation_code">Confirmation code</string>
    <string name="check_your_email">Check your email, we have sent you a reset confirmation code. Please enter the code.</string>
    <string name="we_have_sent_you_a_verification">We have sent you a verification code on your email. Please enter the code below</string>
    <string name="submit">Submit</string>
    <string name="verification">Verification</string>


</resources>
