<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowWhite"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.LoginFragment">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_15"
            android:src="@drawable/ic_back_black"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:fontFamily="@font/segoe_normal"
            android:text="@string/title_reset_password_code"
            android:textColor="@color/textColorDarkPrimary"
            android:textSize="@dimen/text_size_title" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/topbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <ImageView
                    android:layout_width="@dimen/profile_size"
                    android:layout_height="@dimen/profile_size"
                    android:layout_gravity="center"
                    android:layout_marginBottom="35dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/img_verification" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/segoe_normal"
                    android:text="@string/confirmation_code"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/dp_10"
                    android:textAlignment="center"
                    android:fontFamily="@font/segoe_normal"
                    android:text="@string/check_your_email"
                    android:textColor="@color/textColorDarkSecondary"
                    android:textSize="@dimen/text_size_medium" />


                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/EditTextStyle"
                    android:layout_marginTop="@dimen/edit_text_margin"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/placeholder_email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />



                <Button
                    android:id="@+id/btnSend"
                    style="@style/ButtonStyle"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:layout_marginTop= "@dimen/dp_20"
                    android:text="@string/send"/>



            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>