<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowWhite"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.LoginFragment">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tvLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:drawableEnd="@drawable/ic_dropdown"
            android:drawablePadding="@dimen/dp_5"
            android:fontFamily="@font/segoe_normal"
            android:padding="@dimen/dp_10"
            android:text="@string/english"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small" />

        <Spinner
            android:id="@+id/spinnerLang"
            android:layout_toEndOf="@+id/tvLang"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/btnSkip"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:fontFamily="@font/segoe_normal"
            android:minHeight="0dp"
            android:padding="@dimen/dp_10"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/textColorDarkSecondary"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/topbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="35dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_logo" />


                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/EditTextStyle"
                    android:layout_marginTop="@dimen/edit_text_margin"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/placeholder_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/EditTextStyle"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:layout_marginTop="@dimen/edit_text_margin"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/placeholder_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/ButtonStyle"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:text="@string/login"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/segoe_normal"
                    android:text="@string/forgot_password"
                    android:textColor="@color/textColorDarkPrimary"
                    android:textSize="@dimen/text_size_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:fontFamily="@font/segoe_normal"
                    android:text="@string/or_connect_via"
                    android:textColor="@color/textColorDarkDisabled"
                    android:textSize="@dimen/text_size_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp_10"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivInstagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_instagram" />

                    <ImageView
                        android:id="@+id/ivFacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_marginStart="@dimen/dp_10"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_facebook" />

                    <ImageView
                        android:id="@+id/ivGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_google" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:fontFamily="@font/segoe_normal"
                    android:text="@string/dont_have"
                    android:textColor="@color/textColorDarkPrimary"
                    android:textSize="@dimen/text_size_regular" />


            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>